<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/catbb"
        android:contentDescription="@string/cat"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="182dp"
        android:layout_height="207dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/cat"
        app:srcCompat="@drawable/catccc"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Aut"
        android:textColor="@color/bd"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413"/>

    <Button
        android:id="@+id/button"
        style="@style/button"
        android:onClick="EnterB"
        android:layout_width="278dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/bd"
        android:text="@string/AutB"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.158"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/input"
        android:background="@drawable/block"
        android:layout_width="278dp"
        android:layout_height="60dp"
        android:hint="@string/PasswordR"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,ContentDescription,LabelFor"
        app:layout_constraintVertical_bias="0.463"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/input"
        android:background="@drawable/block"
        android:layout_width="278dp"
        android:layout_height="60dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="28dp"
        android:textColor="@color/bd"
        android:hint="@string/EmailR"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill,LabelFor,ContentDescription"
        android:autofillHints="8"/>

    <TextView
        android:id="@+id/textView3"
        android:onClick="RegB"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:text="@string/reg"
        android:textSize="15sp"
        android:textColor="@color/bd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.022"/>
</androidx.constraintlayout.widget.ConstraintLayout>